--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,3 @@
 API_KEY="weather-api-key"
 NEXT_PUBLIC_MODE="dev"
-NEXT_PUBLIC_GOOGLE_MAP_API_KEY="AIzaSyBsWIDtNJiJaeVoQ_Q8VssbheRnaqIuc4Q"
+NEXT_PUBLIC_GOOGLE_MAP_API_KEY="google-map-api-key"
