--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,4 @@ jobs:
       - name: Install modules
         run: yarn
       - name: Run lint
-        run: yarn lint && npx stylelint '**/*.{scss,css}'
+        run: yarn lint
