--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,13 @@
 API_KEY="weather-api-key"
 NEXT_PUBLIC_MODE="dev"
 NEXT_PUBLIC_GOOGLE_MAP_API_KEY="google-map-api-key"
+
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
+
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="secret"
+
+FIREBASE_PROJECT_ID=""
+FIREBASE_CLIENT_EMAIL=""
+FIREBASE_PRIVATE_KEY=""
