--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pre-commit": "yarn lint-staged"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^1.0.0",
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -23,9 +24,12 @@
     "autosuggest-highlight": "^3.3.4",
     "eslint-config-next": "13.4.12",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "firebase": "^10.2.0",
+    "firebase-admin": "^11.10.1",
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
     "next": "13.4.12",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
